--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/core": "^6.0.10",
     "@mantine/form": "^6.0.11",
     "@mantine/hooks": "^6.0.10",
+    "@mantine/notifications": "^6.0.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
