feat: implement redirect to vacancies page when starting app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vacancies-app",
-  "homepage": "https://IlyaHancharuk.github.io/vacancies-app",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
